--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Term::TablePrint
 
 
+0.001_02   2014-03-02
+        - Bugfix documentation.
+
 0.001_01   2014-03-02
         - First release on CPAN.
