Import of KUERBIS/Term-TablePrint-0.002_01 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.002_01
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.002_01.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Term::TablePrint
 
 
+0.002_01   2014-03-02
+        - Added OO style.
+        - Code refactoring.
+        - Update documentation.
+
 0.001_02   2014-03-02
         - Bugfix documentation.
 
