--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::TablePrint
 
 
+0.003   2014-03-06
+        - First stable release
+
 0.002_01   2014-03-02
         - Added OO style.
         - Code refactoring.
