Import of KUERBIS/Term-TablePrint-0.004 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.004
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.004.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for Term::TablePrint
 
 
+0.004   2014-03-21
+        - Fixed "max_rows".
+        - Added option "choose_columns".
+        - Added option "header_row".
+        - Improved documentation.
+
 0.003   2014-03-06
         - First stable release
 
