Import of KUERBIS/Term-TablePrint-0.006 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.006
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.006.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::TablePrint
 
 
+0.006   2014-04-09
+        - Update documentation.
+
 0.005   2014-03-24
         - Bugfix in "max_rows".
         - Added the second "choose_columns" method to the documentation.
