Import of KUERBIS/Term-TablePrint-0.007 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.007
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.007.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::TablePrint
 
 
+0.007   2014-04-12
+        - The option "add_header" replaces the option "header_row".
+        - Update documentation.
+
 0.006   2014-04-09
         - Update documentation.
 
