Import of KUERBIS/Term-TablePrint-0.008 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.008
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.008.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::TablePrint
 
 
+0.008   2014-04-22
+        - Removed deprecated option "header_row".
+        - Improved documentation.
+
 0.007   2014-04-12
         - The option "add_header" replaces the option "header_row".
         - Update documentation.
