Import of KUERBIS/Term-TablePrint-0.009 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.009
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.009.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::TablePrint
 
 
+0.009   2014-05-03
+        - Improved documentation.
+
 0.008   2014-04-22
         - Removed deprecated option "header_row".
         - Improved documentation.
