Import of KUERBIS/Term-TablePrint-0.010 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.010
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.010.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::TablePrint
 
 
+0.010   2014-05-04
+        - Update documentation.
+
 0.009   2014-05-03
         - Improved documentation.
 
