Import of KUERBIS/Term-TablePrint-0.010_01 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.010_01
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.010_01.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::TablePrint
 
 
+0.010_01   2014-05-21
+        - Added option "keep_header".
+        - Update documentation.
+
 0.010   2014-05-04
         - Update documentation.
 
