Import of KUERBIS/Term-TablePrint-0.012 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.012
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.012.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::TablePrint
 
 
+0.012   2014-05-30
+        - Changed the behavior when "table_expand" and "keep_header" are enabled.
+        - Update documentation.
+
 0.011   2014-05-28
         - Changed behavior when "table_expand" and "keep_header" are enabled.
         - Update documentation.
