Import of KUERBIS/Term-TablePrint-0.013 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.013
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.013.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::TablePrint
 
 
+0.013   2014-07-03
+        - Renamed a hash key.
+
 0.012   2014-05-30
         - Changed the behavior when "table_expand" and "keep_header" are enabled.
         - Update documentation.
