--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::TablePrint
 
 
+0.015   2014-07-21
+        - Update documentation.
+
 0.014   2014-07-03
         - Keep also the old hash key name for a while.
 
