--- a/README
+++ b/README
@@ -12,7 +12,7 @@ INSTALLATION
 
 To install this module, run the following commands:
 
-    perl Make.PL
+    perl Makefile.PL
     make
     make test
     make install
@@ -30,7 +30,7 @@ perldoc command.
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2013-2014 Matth‰us Kiem
+Copyright (C) 2013-2014 Matth√§us Kiem
 
 This library is free software; you
 can redistribute it and/or modify it under the same terms
