Import of KUERBIS/Term-TablePrint-0.016 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.016
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.016.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::TablePrint
 
 
+0.016   2014-08-16
+        - Perl minimum version from "5.10.1" to "5.10.0".
+
 0.015   2014-07-21
         - Update documentation.
 
