--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::TablePrint
 
 
+0.017   2014-09-06
+        - Perl minimum version from "5.10.0" to "5.8.0".
+        - Update documentation.
+
 0.016   2014-08-16
         - Perl minimum version from "5.10.1" to "5.10.0".
 
