Import of KUERBIS/Term-TablePrint-0.019 from CPAN.
gitpan-cpan-distribution: Term-TablePrint
gitpan-cpan-version:      0.019
gitpan-cpan-path:         KUERBIS/Term-TablePrint-0.019.tar.gz
gitpan-cpan-author:       KUERBIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,8 +1,12 @@
 Revision history for Term::TablePrint
 
 
+0.019   2014-09-24
+        - Removed the feature added in the last developer release.
+        - Update documentation.
+
 0.018_01   2014-09-24
-        - "print_table": if not colled in void context returns the indexes of the choosen rows.
+        - "print_table": if not called in void context returns the indexes of the chosen rows.
         - Update documentation.
 
 0.018   2014-09-20
