--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::TablePrint
 
 
+0.020   2014-12-05
+        - Replaced "\R" ("\R" not yet available in Perl 5.8.0).
+        - "Term::Choose::Util": minimum version "0.018".
+
 0.019   2014-09-24
         - Removed the feature added in the last developer release.
         - Update documentation.
